<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PDF_Scanner</string>

    <string name="tv_app_name">PDF Scanner</string>

    <string name="tvHistory">History</string>

    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>

    <string name="tv_save">Save</string>
    <string name="tv_saveAll">Save all</string>
    <string name="tv_selectAll">Select all</string>
    <string name="tvRecognized">Recognized</string>

    <string name="tvRecognize">Recognize</string>

    <string name="tvWhiteBoard">Focus your phone on the whiteboard and take pictures for scanning.</string>
    <string name="tvOCR">Hold your Phone over document and take a picture.</string>
    <string name="tvSingle">Hold your Phone over a document and take a picture.</string>
    <string name="tvBatch">Hold your Phone over a document and Continuous shooting.</string>
    <string name="tvCard">Hold your phone over the ID Card/Passport/Business Card to take pictures.</string>

    <string name="tvAdd">Add</string>
    <string name="tvRotate">Rotate</string>
    <string name="tvCrop">Crop</string>
    <string name="tvFilter">Filter</string>
    <string name="tvSign">Sign</string>
    <string name="tvText">Text</string>
    <string name="tvEraser">Eraser</string>
    <string name="tvDelete">Delete</string>

    <string name="tvRename">Rename</string>
    <string name="tvMore">More</string>
    <string name="tvMove">Move</string>
    <string name="tvCopy">Copy</string>
    <string name="tvShare">Share</string>

    <string name="tvDragItem">Tap the item to rearrange them:</string>
    <string name="tvDone">Done</string>

    <string name="tvLeaveScanning">Leave Scanning</string>
    <string name="tvContentLeave">This will delete all scanned pages. Are you sure?</string>
    <string name="tvContentDelete">Are you sure yu want to delete the entire document?</string>
    <string name="tvDeleteSelect">Are you sure to delete these items?</string>

    <string name="tvLanguage">Language:</string>

    <string name="tvOCRLanguage">OCR Language</string>

    <string name="tvAddPage">Add Page:</string>
    <string name="tvTakePhoto">Take another photo</string>
    <string name="tvSelectAlbum">Select from Album</string>

    <string name="tvSearch">Search</string>

    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>

    <string name="tvNewFolder">New Folder</string>
    <string name="tvNewScan">New Scan</string>

    <string name="tvSettings">Settings</string>

    <string name="tvStartCamera">Start with Camera</string>

    <string name="contentRate">We \'re a tiny team working extremely hard to give you the best apps for free. Your 5-Stars are better than anything in the world!</string>

    <string name="giveStars">GIVE 5 STARS</string>
    <string name="tvSuggestion">Suggestion</string>

    <string name="tvNoMatches">Your search did not return any matches</string>

    <string name="tvPDF">PDF</string>
    <string name="saveDoc">Saving Document...</string>
    <string name="tvWait">Please wait...</string>

    <string name="tvCancel">Cancel</string>
    <string name="tvConfirm">Confirm</string>
    <string name="tvSelectAll">Select all</string>
    <string name="tvOK">OK</string>
    <string name="tvReplace">Replace</string>

    <string name="tvPremium">Premium</string>
    <string name="tvFeedBack">Feedback &amp; Support</string>
    <string name="tvSizeEditText">Text sign size</string>
    <string name="tvAbout">About Us</string>
    <string name="tvList">list</string>

    <string name="tvComment">Comment</string>
    <string name="tvEmail">Email</string>
    <string name="tvSave">Save</string>
    <string name="tvPrint">Print</string>
    <string name="tvToAlbum">To Album</string>

    <string name="tvNoResultSearch">Your search did not return any matches</string>

    <string name="tvRecognizeText">Recognize image &amp; convert to text</string>

    <string name="tvAllPages">Apply to all pages</string>

    <string name="tvChooseFormat">Choose format:</string>
    <string name="tvDocument">Document(.PDF)</string>
    <string name="tvImage">Image(.JPG)</string>
    <string name="tvDocumentWord">Document(Word)</string>
    <string name="tvTxt">Text(TXT)</string>

    <string name="tvFolderEmpty">The folders is empty! Click the "+" to add docs or folders</string>
    
    <string name="tvTipsCopy">files with the same already exists.</string>

    <string name="aboutUS">About Us</string>
    <string name="copyRight">Copyright 2018-2021 PDF Document Scanner All Rights Reserved</string>


</resources>