<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/colorTransparent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/tvRate"
            android:text="@string/contentRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <Button
            android:textSize="@dimen/tvDialogRate"
            android:textColor="@color/white"
            android:text="@string/giveStars"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            />

        <Button
            android:textSize="@dimen/tvDialogRate"
            android:textColor="@color/tvRate"
            android:text="@string/tvSuggestion"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/bg_btn_suggestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>