<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/bg_dialog_leave"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tips"
            />

        <TextView
            android:textSize="14sp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="25dp"
            android:id="@+id/tvContentCopy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnConfirmCopy"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_confirm"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvConfirm"
            />

        <Button
            android:id="@+id/btnReplaceCopy"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_replace"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvReplace"
            />

        <Button
            android:id="@+id/btnCancelCopy"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/bg_btn_replace"
            android:layout_marginTop="10dp"
            android:textAllCaps="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCancel"
            />
    </LinearLayout>
</RelativeLayout>