<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:background="@color/colorApp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.component.about.AboutActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorApp"
            >
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tbAboutUs"
                app:title="@string/aboutUS"
                app:titleTextColor="@color/white"
                android:background="@color/colorApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_back"
                />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:layout_gravity="center"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@mipmap/ic_app_pdf"
                />

            <TextView
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_app_name"
                android:textColor="@color/white"
                />

            <TextView
                android:textColor="@color/white"
                android:text="1.0.0"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/tvAboutVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <TextView
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyRight"
            />
    </RelativeLayout>
</layout>