<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:paddingBottom="10dp"
        android:background="@drawable/bg_dialog_leave"
        android:layout_centerInParent="true"
        android:paddingTop="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:text="@string/tvComment"
            android:id="@+id/tvComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        <LinearLayout
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/bg_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"

            >
            <EditText
                android:hint="@string/tvComment"
                android:background="@null"
                android:textColor="@color/white"
                android:scrollbars="vertical"
                android:id="@+id/edtComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_decline"
                android:id="@+id/btnCancelComment"
                android:text="@string/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAcceptComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_accept"
                android:text="@string/tvOK"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>