<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:background="@drawable/bg_dialog_leave"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/tvContentRename"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRename" />

        <RelativeLayout
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:background="@drawable/bg_rename"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText
                android:background="@null"
                android:id="@+id/edtReName"
                android:text="Scan"
                android:textColor="@color/black"
                android:focusable="true"
                android:maxLength="25"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                />
            <ImageButton
                android:id="@+id/btnDeleteName"
                android:background="@null"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_delete_rename"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:textSize="14sp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_decline"
                android:id="@+id/btnDeclineReName"
                android:text="@string/tvCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <LinearLayout
                android:layout_width="25dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btnAcceptRename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_accept"
                android:text="@string/tvConfirm"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>